...
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:layout_constraintVertical_bias="0.293" />

    <!--Field to confirm/modify autofilled preferred name-->
    <!--android:hint only useful in informing the user when the user wants to modify name-->
    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PreferredName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoField"
        app:layout_constraintVertical_bias="0.299" />

    <!--button to submit user's name and photo URL to then go to the PROFILE PREVIEW screen-->
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSubmitClicked"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
...
